# SimpleVKFW

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  build.bat  build.sh  main copy.cpp  main.cpp  test.cpp  tmpimage.py
ext_includes/glad/: gl.h
shaders/: compile.bat  simple_shader.frag  simple_shader.vert  simple_shader_vert.spv
source/common/: argparser.h  basic_math.h  bits.h  memory.h  terminal.h  typesio.h  utilities.h
source/data/: bytestring.h  filetypes.h  json.h
source/fun/: etcs_tags.h
source/interface/: glfwrap.h  imgui_wrap.h  imguiwrap.h  rtaudio_wrap.h  term_handler.h  vkfw.h  vkfw_base.h  vkfw_enum.h  vkfw_wrap.h
source/main/: camera.h  color.h  colormodel.h  dbops.h  ecsbase.h  event_handler.h  fork.h  image.h  imgui_events.h  input_handler.h  mesh.h  rtaudio_wrap.h  sampler.h  tensor.h  timer.h
source/math/: algo.h  complex.h  linalg.h  matrices.h  probability.h  randvec.h  vectors.h
source/meta/: decim.py  vkfw_enum_gen.py  vkfw_handlers.json  vkfw_handlers.py  vkfw_parts.py  vkwrap_handlers_old.py
source/platform_dependent/: pd_filetypes.h  pd_terminal.h
source/sound/: player.h  sampler.h  samples.h  sound.h
source/unsorted/: crc.h
stuff/: testt.txt
stuff/DrenderStuff/: DESCRIPTION.md  drender.cpp  run.sh  task2
stuff/Stuff/: dec64.h  vkfw_handlers.h  vkfw_wrap_old.h  vkfw_wrap_old2.h  vkwrap.h  vkwrap_handlers.h
stuff/Stuff/Old/: camera.h  colorsLast.h  colorsOld.h  colorsOld2.h  image.cpp  imageOld.h  objects.h  tensorBigTSlice.h  texprimitives.h  tformat.h  triangle.h  vectorsOld.h  vkwrap2.h
stuff/Stuff/oldcol/: color.h  image.h
stuff/Stuff/redo/: autodiff.h  common.h  diffrender2D.h  diffrender2Dold.h  image.h  primitives.h  renderer.h  texture.h
stuff/exampleC/: test  testt.c  testt.h
tests/: tests.cpp  tests.h
